creando la cadena de conexion

--- a/sesion02/appsettings.json
+++ b/sesion02/appsettings.json
@@ -1,7 +1,9 @@
+{
+"ConnectionStrings": {
 
+  "connection": "server=.; database=CibertecBD; Trusted_Connection=True; MultipleActiveResultSets=True; TrustServerCertificate=False; Encrypt=False"  
 
-
-
+ },
 
 
 {
