creando model Producto

--- a/sesion02/appsettings.json
+++ b/sesion02/appsettings.json
@@ -1,17 +1,17 @@
 {
-"ConnectionStrings": {
+  "ConnectionStrings": {
 
-  "connection": "server=.; database=CibertecBD; Trusted_Connection=True; MultipleActiveResultSets=True; TrustServerCertificate=False; Encrypt=False"  
+    "connection": "server=DESKTOP-42MQB64; database=CibertecBD; Trusted_Connection=True; MultipleActiveResultSets=True; TrustServerCertificate=False; Encrypt=False"
 
- },
-
-
-{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
   },
-  "AllowedHosts": "*"
+
+
+
+   "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
 }
